i18n for about us page

--- a/pages/locale/fa/LC_MESSAGES/django.po
+++ b/pages/locale/fa/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-04 19:05+0330\n"
+"POT-Creation-Date: 2022-12-15 17:29+0330\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,6 +16,11 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
+#: .\templates\pages\aboutus.html:7
+msgid "About US Page"
+msgstr "درباره ما"
+
 #: .\templates\pages\home.html:7
 msgid "Home"
 msgstr "خانه"
